[package]
name = "diagram-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
eframe = { version = "0.23.0", features = ["persistence"] }
encoding_rs = "0.8.33"
ron = "0.8.1"
serde = { version = "1.0.192", features = ["derive"] }
zstd = "0.13.0"
