[package]
name = "diagram-viewer"
version = "0.1.0"
edition = "2021"
exclude = ["crates/**"]

# [profile.release]
# strip = true
# opt-level = "s"
# lto = true
# codegen-units = 1
# panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.23.0", features = ["persistence"] }
egui = { version = "0.23.0", features = ["callstack"] }
egui_extras = "0.23.0"
encoding_rs = "0.8.33"
png = "0.17.10"
rfd = "0.12.1"
ron = "0.8.1"
serde = { version = "1.0.192", features = ["derive"] }
zstd = "0.13.0"
diagram-types = { path="./crates/diagram-types" }
train-drawer = { path = "./crates/train-drawer"}
app-ui = { path="./crates/app-ui" }