[package]
name = "app-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.23.0", features = ["persistence"] }
diagram-types = { path = "../diagram-types/"}
diagram-testdata = { path = "../diagram-testdata/"}
train-drawer = { path = "../train-drawer/"}