[package]
name = "diagram-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
ron = "0.8.1"
regex = "1.10.2"
zstd = "0.13.0"
